Input > Screen Bug #44405

Closed
opened 2015-04-15 20:52:33 +02:00 by Anton · 10 comments

System Information:

OSX 10.9.5
AMD Radeon HD 6770M 512 МБ

Blender version:
Broken: 2.74

Description of error:

If you:

1 Change any combination of keyboard shortcuts in menu Input > Screen > Screen (Global)
2 Export settings to *.py - file
3 import settings from *.py - file

> program will randomly switch to fullscreen mode

System Information: OSX 10.9.5 AMD Radeon HD 6770M 512 МБ Blender version: Broken: 2.74 Description of error: If you: 1 Change any combination of keyboard shortcuts in menu Input > Screen > Screen (Global) 2 Export settings to *.py - file 3 import settings from *.py - file # > program will randomly switch to fullscreen mode
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AntohaRDNS

Added subscriber: @AntohaRDNS

Added subscriber: @mont29

Added subscriber: @mont29

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Yuck… can confirm there’s something strange going on here… For me, it starts switching continuously between normal and full screen mode even…

Dalai, maybe you have some time to look into this?

Yuck… can confirm there’s something strange going on here… For me, it starts switching continuously between normal and full screen mode even… Dalai, maybe you have some time to look into this?
Julian Eisel self-assigned this 2015-04-17 09:05:18 +02:00
Member

The issue is the handling of the return from fullscreen icon that appears in the upper right in fullscreen mode. We need to be a bit more careful with its event handling. Can have a look as well.

The issue is the handling of the return from fullscreen icon that appears in the upper right in fullscreen mode. We need to be a bit more careful with its event handling. Can have a look as well.

This issue was referenced by de8e89d4f5

This issue was referenced by de8e89d4f5f81416cd45d4efdd7c0cb4d412a451
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit de8e89d4f5.

Closed by commit de8e89d4f5.
Author

Thank you!

Thank you!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44405
No description provided.