Fix T44405: Importing keyconfig with changed shortcut in "Screen Global" causes rapid fullscreen toggeling